v3.0.2: fix https://github.com/mustakshif/Asri/issues/38 on mobile

--- a/style/platforms/mobile.scss
+++ b/style/platforms/mobile.scss
@@ -1,10 +1,20 @@
 body.body--mobile {
     // -> js
 
+    //编辑区
+    .protyle-wysiwyg {
+
+        .bq,
+        .protyle-wysiwyg blockquote,
+        [data-node-id].render-node[data-type=NodeBlockQueryEmbed] {
+            padding: 4px 8px;
+        }
+    }
+
     //菜单 
     #menu {
         &.b3-menu--fullscreen {
-            box-shadow: none;            
+            box-shadow: none;
         }
     }
 
